fixed bootstrap gutter and pokemon now horizontal scroll and are proper width

--- a/pokemon-app/src/components/pokemons/PokemonsItem.module.css
+++ b/pokemon-app/src/components/pokemons/PokemonsItem.module.css
@@ -5,5 +5,5 @@
 }
 
 .featuredPokemonCard {
-    width: 40%;
+    min-width: 12em;
 }
